parent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parent
spec:
  ports:
  - port: 80
    targetPort: http
