parent/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: parent
spec:
  to:
    kind: Service
    name: parent
